Timers are ready to be tested.

--- a/TIMER_project/Objects/timer_test_project.build_log.htm
+++ b/TIMER_project/Objects/timer_test_project.build_log.htm
@@ -28,30 +28,14 @@ Project File Date:  12/21/2022
 *** Using Compiler 'V6.18', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'Target 1'
 assembling startup_stm32f10x_md.s...
-_HAL_GPIO.c(9): warning: no previous extern declaration for non-static variable 'PINPOS' [-Wmissing-variable-declarations]
-uint32_t PINPOS[16]= {//takes me to the 1st BIT in MODE
-         ^
-_HAL_GPIO.c(9): note: declare 'static' if the variable is not intended to be used outside of this translation unit
-uint32_t PINPOS[16]= {//takes me to the 1st BIT in MODE
-^
-1 warning generated.
-compiling _HAL_GPIO.c...
-RTE/Device/STM32F103C8/system_stm32f10x.c(166): warning: no previous extern declaration for non-static variable 'AHBPrescTable' [-Wmissing-variable-declarations]
-__I uint8_t AHBPrescTable[16] = {0, 0, 0, 0, 0, 0, 0, 0, 1, 2, 3, 4, 6, 7, 8, 9};
-            ^
-RTE/Device/STM32F103C8/system_stm32f10x.c(166): note: declare 'static' if the variable is not intended to be used outside of this translation unit
-__I uint8_t AHBPrescTable[16] = {0, 0, 0, 0, 0, 0, 0, 0, 1, 2, 3, 4, 6, 7, 8, 9};
-    ^
-1 warning generated.
-compiling system_stm32f10x.c...
-main.c(24): warning: mixing declarations and code is incompatible with standards before C99 [-Wdeclaration-after-statement]
+main.c(19): warning: mixing declarations and code is incompatible with standards before C99 [-Wdeclaration-after-statement]
         uint16_t x = 0;
                  ^
-main.c(24): warning: variable 'x' set but not used [-Wunused-but-set-variable]
-main.c(34): warning: no previous prototype for function 'EXTI4_IRQHandler' [-Wmissing-prototypes]
+main.c(19): warning: variable 'x' set but not used [-Wunused-but-set-variable]
+main.c(31): warning: no previous prototype for function 'EXTI4_IRQHandler' [-Wmissing-prototypes]
 void EXTI4_IRQHandler(void){
      ^
-main.c(34): note: declare 'static' if the function is not intended to be used outside of this translation unit
+main.c(31): note: declare 'static' if the function is not intended to be used outside of this translation unit
 void EXTI4_IRQHandler(void){
 ^
 static 
@@ -69,37 +53,48 @@ static uint8_t UsartBaudRateSet(USART_TypeDef *UsartP, uint32_t baudR);
                ^
 6 warnings generated.
 compiling main.c...
-printMsg.c(186): warning: implicitly declaring library function 'vsprintf' with type 'int (char *, const char *, __builtin_va_list)' [-Wimplicit-function-declaration]
-        vsprintf(buff, msg, args);
-        ^
-printMsg.c(186): note: include the header <stdio.h> or explicitly provide a declaration for 'vsprintf'
-printMsg.c(186): warning: format string is not a string literal [-Wformat-nonliteral]
-        vsprintf(buff, msg, args);
-                       ^~~
-printMsg.c(199): warning: no newline at end of file [-Wnewline-eof]
-        printer.Uart_instance = USART1; */
-                                          ^
-3 warnings generated.
-compiling printMsg.c...
-_TIM_CONFIG.c(180): warning: no previous prototype for function 'TIM2_IRQHandler' [-Wmissing-prototypes]
+RTE/Device/STM32F103C8/system_stm32f10x.c(166): warning: no previous extern declaration for non-static variable 'AHBPrescTable' [-Wmissing-variable-declarations]
+__I uint8_t AHBPrescTable[16] = {0, 0, 0, 0, 0, 0, 0, 0, 1, 2, 3, 4, 6, 7, 8, 9};
+            ^
+RTE/Device/STM32F103C8/system_stm32f10x.c(166): note: declare 'static' if the variable is not intended to be used outside of this translation unit
+__I uint8_t AHBPrescTable[16] = {0, 0, 0, 0, 0, 0, 0, 0, 1, 2, 3, 4, 6, 7, 8, 9};
+    ^
+1 warning generated.
+compiling system_stm32f10x.c...
+_HAL_GPIO.c(9): warning: no previous extern declaration for non-static variable 'PINPOS' [-Wmissing-variable-declarations]
+uint32_t PINPOS[16]= {//takes me to the 1st BIT in MODE
+         ^
+_HAL_GPIO.c(9): note: declare 'static' if the variable is not intended to be used outside of this translation unit
+uint32_t PINPOS[16]= {//takes me to the 1st BIT in MODE
+^
+1 warning generated.
+compiling _HAL_GPIO.c...
+_TIM_CONFIG.c(228): warning: no previous prototype for function 'TIM2_IRQHandler' [-Wmissing-prototypes]
 void TIM2_IRQHandler(void){
      ^
-_TIM_CONFIG.c(180): note: declare 'static' if the function is not intended to be used outside of this translation unit
+_TIM_CONFIG.c(228): note: declare 'static' if the function is not intended to be used outside of this translation unit
 void TIM2_IRQHandler(void){
 ^
 static 
-_TIM_CONFIG.c(185): warning: no previous prototype for function 'TIM3_IRQHandler' [-Wmissing-prototypes]
+_TIM_CONFIG.c(240): warning: no previous prototype for function 'TIM3_IRQHandler' [-Wmissing-prototypes]
 void TIM3_IRQHandler(void){
      ^
-_TIM_CONFIG.c(185): note: declare 'static' if the function is not intended to be used outside of this translation unit
+_TIM_CONFIG.c(240): note: declare 'static' if the function is not intended to be used outside of this translation unit
 void TIM3_IRQHandler(void){
 ^
 static 
-_TIM_CONFIG.c(190): warning: no previous prototype for function 'TIM4_IRQHandler' [-Wmissing-prototypes]
+_TIM_CONFIG.c(245): warning: no previous prototype for function 'TIM4_IRQHandler' [-Wmissing-prototypes]
 void TIM4_IRQHandler(void){
      ^
-_TIM_CONFIG.c(190): note: declare 'static' if the function is not intended to be used outside of this translation unit
+_TIM_CONFIG.c(245): note: declare 'static' if the function is not intended to be used outside of this translation unit
 void TIM4_IRQHandler(void){
+^
+static 
+_TIM_CONFIG.c(250): warning: no previous prototype for function 'SysTick_Handler' [-Wmissing-prototypes]
+void SysTick_Handler(void){
+     ^
+_TIM_CONFIG.c(250): note: declare 'static' if the function is not intended to be used outside of this translation unit
+void SysTick_Handler(void){
 ^
 static 
 _TIM_CONFIG.c(1): warning: In file included from...
@@ -114,11 +109,23 @@ _TIM_CONFIG.c(2): warning: In file included from...
 ./printMsg.h(22): warning: unused function 'UsartBaudRateSet' [-Wunused-function]
 static uint8_t UsartBaudRateSet(USART_TypeDef *UsartP, uint32_t baudR); 
                ^
-6 warnings generated.
+7 warnings generated.
 compiling _TIM_CONFIG.c...
+printMsg.c(186): warning: implicitly declaring library function 'vsprintf' with type 'int (char *, const char *, __builtin_va_list)' [-Wimplicit-function-declaration]
+        vsprintf(buff, msg, args);
+        ^
+printMsg.c(186): note: include the header <stdio.h> or explicitly provide a declaration for 'vsprintf'
+printMsg.c(186): warning: format string is not a string literal [-Wformat-nonliteral]
+        vsprintf(buff, msg, args);
+                       ^~~
+printMsg.c(199): warning: no newline at end of file [-Wnewline-eof]
+        printer.Uart_instance = USART1; */
+                                          ^
+3 warnings generated.
+compiling printMsg.c...
 linking...
-Program Size: Code=2424 RO-data=268 RW-data=64 ZI-data=1632  
-".\Objects\timer_test_project.axf" - 0 Error(s), 17 Warning(s).
+Program Size: Code=2516 RO-data=268 RW-data=68 ZI-data=1648  
+".\Objects\timer_test_project.axf" - 0 Error(s), 18 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -149,7 +156,7 @@ Package Vendor: Keil
       Source file:   Device/Source/ARM/startup_stm32f10x_md.s
       Source file:   Device/Source/system_stm32f10x.c
       Include file:  RTE_Driver/Config/RTE_Device.h
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
