--- a/TIMER_project/Objects/timer_test_project.build_log.htm
+++ b/TIMER_project/Objects/timer_test_project.build_log.htm
@@ -22,24 +22,40 @@ Dialog DLL:      TCM.DLL V1.56.1.0
  
 <h2>Project:</h2>
 D:\yyigitbasi_stm32_git\TIMER_project\timer_test_project.uvprojx
-Project File Date:  01/02/2023
+Project File Date:  01/06/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.18', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'Target 1'
 assembling startup_stm32f10x_md.s...
+main.c(4): warning: In file included from...
+./_DMA.h(36): warning: no newline at end of file [-Wnewline-eof]
+                                                                _USART1_DMA_RX_EN()     }
+                                                                                         ^
 main.c(21): warning: implicit conversion loses integer precision: 'unsigned int' to 'uint16_t' (aka 'unsigned short') [-Wimplicit-int-conversion]
         _init_usart1()
         ^~~~~~~~~~~~~~
-./_UART.h(83): note: expanded from macro '_init_usart1'
+./_UART.h(65): note: expanded from macro '_init_usart1'
                                                                 _USART1_BR_SET()        \
                                                                 ^~~~~~~~~~~~~~~~
-./_UART.h(40): note: expanded from macro '_USART1_BR_SET'
+./_UART.h(46): note: expanded from macro '_USART1_BR_SET'
                                                                  USART1->BRR = (mantissa << 4) | fraction;      }                                                       
                                                                              ~ ~~~~~~~~~~~~~~~~^~~~~~~~~~
-main.c(23): warning: mixing declarations and code is incompatible with standards before C99 [-Wdeclaration-after-statement]
+main.c(26): warning: mixing declarations and code is incompatible with standards before C99 [-Wdeclaration-after-statement]
         uint16_t x = 0;
                  ^
+main.c(6): warning: no previous extern declaration for non-static variable 'Transmit' [-Wmissing-variable-declarations]
+volatile char Transmit[BUFFER_SIZE_1];
+              ^
+main.c(6): note: declare 'static' if the variable is not intended to be used outside of this translation unit
+volatile char Transmit[BUFFER_SIZE_1];
+         ^
+main.c(7): warning: no previous extern declaration for non-static variable 'Receive' [-Wmissing-variable-declarations]
+volatile char Receive[BUFFER_SIZE_1];
+              ^
+main.c(7): note: declare 'static' if the variable is not intended to be used outside of this translation unit
+volatile char Receive[BUFFER_SIZE_1];
+         ^
 main.c(1): warning: In file included from...
 ./_TIM_CONFIG.h(5): warning: In file included from...
 ./_HAL_GPIO.h(73): warning: unused function 'config_pin' [-Wunused-function]
@@ -48,19 +64,19 @@ static void config_pin(GPIO_TypeDef *port, uint32_t pinNumber, uint32_t mode_typ
 ./_HAL_GPIO.h(74): warning: unused function 'config_pin_speed' [-Wunused-function]
 static void config_pin_speed(GPIO_TypeDef *port, uint32_t pinNumber, uint32_t pinSpeed, uint32_t mode);
             ^
-4 warnings generated.
+7 warnings generated.
 compiling main.c...
-_UART.c(19): warning: no previous prototype for function 'DMA1_Channel4_IRQHandler' [-Wmissing-prototypes]
+_UART.c(73): warning: no previous prototype for function 'DMA1_Channel4_IRQHandler' [-Wmissing-prototypes]
 void DMA1_Channel4_IRQHandler(void){
      ^
-_UART.c(19): note: declare 'static' if the function is not intended to be used outside of this translation unit
+_UART.c(73): note: declare 'static' if the function is not intended to be used outside of this translation unit
 void DMA1_Channel4_IRQHandler(void){
 ^
 static 
-_UART.c(23): warning: no previous prototype for function 'DMA1_Channel5_IRQHandler' [-Wmissing-prototypes]
+_UART.c(77): warning: no previous prototype for function 'DMA1_Channel5_IRQHandler' [-Wmissing-prototypes]
 void DMA1_Channel5_IRQHandler(void){
      ^
-_UART.c(23): note: declare 'static' if the function is not intended to be used outside of this translation unit
+_UART.c(77): note: declare 'static' if the function is not intended to be used outside of this translation unit
 void DMA1_Channel5_IRQHandler(void){
 ^
 static 
@@ -81,14 +97,6 @@ uint32_t PINPOS[16]= {//takes me to the 1st BIT in MODE
 ^
 1 warning generated.
 compiling _HAL_GPIO.c...
-RTE/Device/STM32F103C8/system_stm32f10x.c(166): warning: no previous extern declaration for non-static variable 'AHBPrescTable' [-Wmissing-variable-declarations]
-__I uint8_t AHBPrescTable[16] = {0, 0, 0, 0, 0, 0, 0, 0, 1, 2, 3, 4, 6, 7, 8, 9};
-            ^
-RTE/Device/STM32F103C8/system_stm32f10x.c(166): note: declare 'static' if the variable is not intended to be used outside of this translation unit
-__I uint8_t AHBPrescTable[16] = {0, 0, 0, 0, 0, 0, 0, 0, 1, 2, 3, 4, 6, 7, 8, 9};
-    ^
-1 warning generated.
-compiling system_stm32f10x.c...
 _TIM_CONFIG.c(229): warning: no previous prototype for function 'TIM2_IRQHandler' [-Wmissing-prototypes]
 void TIM2_IRQHandler(void){
      ^
@@ -127,13 +135,17 @@ static void config_pin_speed(GPIO_TypeDef *port, uint32_t pinNumber, uint32_t pi
             ^
 6 warnings generated.
 compiling _TIM_CONFIG.c...
+RTE/Device/STM32F103C8/system_stm32f10x.c(166): warning: no previous extern declaration for non-static variable 'AHBPrescTable' [-Wmissing-variable-declarations]
+__I uint8_t AHBPrescTable[16] = {0, 0, 0, 0, 0, 0, 0, 0, 1, 2, 3, 4, 6, 7, 8, 9};
+            ^
+RTE/Device/STM32F103C8/system_stm32f10x.c(166): note: declare 'static' if the variable is not intended to be used outside of this translation unit
+__I uint8_t AHBPrescTable[16] = {0, 0, 0, 0, 0, 0, 0, 0, 1, 2, 3, 4, 6, 7, 8, 9};
+    ^
+1 warning generated.
+compiling system_stm32f10x.c...
 linking...
-.\Objects\timer_test_project.axf: Error: L6218E: Undefined symbol transmitTX1 (referred from main.o).
-.\Objects\timer_test_project.axf: Error: L6218E: Undefined symbol receiveRX1 (referred from main.o).
-Not enough information to list image symbols.
-Not enough information to list load addresses in the image map.
-Finished: 2 information, 0 warning and 2 error messages.
-".\Objects\timer_test_project.axf" - 2 Error(s), 16 Warning(s).
+Program Size: Code=2924 RO-data=268 RW-data=64 ZI-data=1704  
+".\Objects\timer_test_project.axf" - 0 Error(s), 19 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -160,11 +172,10 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.6.0
 
    * Component: Keil::Device:Startup:1.0.0
-      Source file:   Device/Source/ARM/STM32F1xx_OPT.s
-      Source file:   Device/Source/ARM/startup_stm32f10x_md.s
-      Include file:  RTE_Driver/Config/RTE_Device.h
       Source file:   Device/Source/system_stm32f10x.c
-Target not created.
+      Source file:   Device/Source/ARM/startup_stm32f10x_md.s
+      Source file:   Device/Source/ARM/STM32F1xx_OPT.s
+      Include file:  RTE_Driver/Config/RTE_Device.h
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
